Lots of updates

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -1,7 +1,7 @@
 # Saleor
 # Copyright (C) 2019 Bringall S.A de C.V
 # This file is distributed under the same license as the Saleor package.
-# Mirumee Software <hello@mirumee.com>, 2017.
+# BRINGALL S.A de C.V <hello@mirumee.com>, 2017.
 #
 #, fuzzy
 msgid ""
