--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -1,7 +1,7 @@
 # Saleor
 # Copyright (C) 2019 Bringall S.A de C.V
 # This file is distributed under the same license as the Saleor package.
-# Mirumee Software <hello@mirumee.com>, 2017.
+# BRINGALL S.A de C.V <hello@mirumee.com>, 2017.
 #
 # Translators:
 # Juan Pablo Garcia <juanpagfe@gmail.com>, 2017
@@ -1763,6 +1763,16 @@ msgctxt "Signup form primary action"
 msgid "Create an account"
 msgstr "Crea una cuenta"
 
+#: templates/base.html:78 templates/base.html:148
+msgctxt "Main navigation item"
+msgid "Your Cart"
+msgstr "Carrito"
+
+#: templates/base.html:208
+msgctxt "Main navigation item"
+msgid "Your Cart"
+msgstr "Carrito"
+
 #: templates/base.html:78 templates/base.html:215
 msgctxt "Main navigation item"
 msgid "Dashboard"
@@ -1796,10 +1806,6 @@ msgstr "Buscar producto"
 msgid "Search"
 msgstr "Buscar"
 
-#: templates/base.html:148 templates/base.html:208
-msgctxt "Main navigation item"
-msgid "Your Cart"
-msgstr "Tu carro"
 
 #: templates/base.html:202
 msgid "Account"
@@ -1831,7 +1837,12 @@ msgctxt "Cart dropdown primary action"
 msgid "Checkout"
 msgstr "Checkout"
 
-#: templates/cart_dropdown.html:62 templates/checkout/index.html:91
+#: templates/cart_dropdown.html:62
+msgctxt "Empty cart message"
+msgid "There are no products in your shopping cart."
+msgstr "No hay productos en tu carro de compras."
+
+#: templates/checkout/index.html:91
 msgctxt "Empty cart message"
 msgid "There are no products in your shopping cart."
 msgstr "No hay productos en tu carro de compras."
@@ -1914,7 +1925,7 @@ msgstr "Total"
 #: templates/checkout/index.html:7
 msgctxt "Cart page title"
 msgid "Your cart"
-msgstr "Tu carro"
+msgstr "Carrito"
 
 #: templates/checkout/index.html:12
 msgctxt "Cart breadcrumb"
@@ -5714,7 +5725,7 @@ msgstr "Promociónes y Descuentos"
 #: templates/home.html:13
 msgctxt "Homepage title"
 msgid "we get to where you are"
-msgstr "llegamos a donde eestés"
+msgstr "llegamos a donde estés"
 
 #: templates/home.html:15 templates/home.html:30 templates/home.html:42
 msgctxt "Homepage action"
