--- a/saleor/dashboard/locale/en/LC_MESSAGES/django.po
+++ b/saleor/dashboard/locale/en/LC_MESSAGES/django.po
@@ -1,14 +1,14 @@
 # Saleor
 # Copyright (C) 2019 Bringall S.A de C.V
 # This file is distributed under the same license as the Saleor package.
-# Mirumee Software <hello@mirumee.com>, 2017.
+# BRINGALL S.A de C.V <hello@mirumee.com>, 2017.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: master\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-04-08 06:19-0500\n"
+"POT-Creation-Date: 2019-06-09 15:24-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
