--- a/saleor/dashboard/locale/en/LC_MESSAGES/django.po
+++ b/saleor/dashboard/locale/en/LC_MESSAGES/django.po
@@ -382,7 +382,7 @@ msgstr ""
 
 #: saleor/dashboard/discount/filters.py:38
 msgctxt "Sale type filter choice"
-msgid "USD"
+msgid "MXN"
 msgstr ""
 
 #: saleor/dashboard/discount/filters.py:39
