--- a/saleor/dashboard/locale/es/LC_MESSAGES/django.po
+++ b/saleor/dashboard/locale/es/LC_MESSAGES/django.po
@@ -402,7 +402,7 @@ msgstr "Importe de descuento"
 
 #: saleor/dashboard/discount/filters.py:38
 msgctxt "Sale type filter choice"
-msgid "USD"
+msgid "MXN"
 msgstr "Dólares"
 
 #: saleor/dashboard/discount/filters.py:39
